# TaskTracker

./: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/testApp/: admin.py  managers.py  models.py  serialiers.py  views.py
backend/testApp/migrations/: 0001_initial.py  0002_alter_category_id_alter_project_id_alter_task_id_and_more.py  0003_remove_task_by_me_task_by_who.py  0004_alter_category_project.py  0005_project_is_favorite.py  0006_task_project_alter_task_category_and_more.py  0007_alter_project_name.py  0008_alter_category_color.py  0009_alter_task_date_deadline.py  0010_remove_task_date_create_task_date_start_and_more.py  0011_task_is_continued_alter_task_date_deadline.py  0012_task_is_favorite_alter_task_date_deadline.py  0013_remove_project_user_project_members_project_owner_and_more.py  0014_project_owners_alter_task_date_deadline.py  0015_user_avatar_alter_task_date_deadline.py  0016_alter_task_date_deadline.py  0017_alter_task_date_deadline.py  0018_alter_task_date_deadline.py  0019_alter_project_name_alter_task_date_deadline.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/components/Avatar/: Avatar.css  Avatar.jsx
frontend/src/pages/: LoginPage.jsx
frontend/src/shared/: ProtectedRoute.jsx
frontend/src/store/: authslice.js  categoryslice.js  projectslice.js  taskslice.js
frontend/src/styles/: animation.pcss  base.pcss  example-components.pcss  fonts.css  settings.pcss  styleguide.pcss  typography.pcss
(+81 files in other folders)
